# openclaw-telegram-readonly

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
references/: setup-and-safety.md
scripts/: telegram_readonly.py
src/telegram_readonly/: cli.py
src/telegram_readonly.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
