[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-readonly"
version = "0.1.0"
description = "Read-only Telegram CLI for personal-account access via Telethon/MTProto"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "telethon>=1.42,<2",
]
license = { text = "MIT" }
authors = [
  { name = "telegram-readonly contributors" }
]

[project.urls]
Homepage = "https://github.com/ropl-btc/telegram-readonly-cli"
Repository = "https://github.com/ropl-btc/telegram-readonly-cli"

[project.scripts]
telegram-readonly = "telegram_readonly.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
